[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="rum_slider" type="HSlider" parent="."]
margin_left = 217.655
margin_top = 152.33
margin_right = 379.655
margin_bottom = 168.33
step = 0.5

[node name="Label" type="Label" parent="rum_slider"]
margin_left = 169.407
margin_top = -10.1419
margin_right = 209.407
margin_bottom = 28.8581
text = "0"
align = 1
valign = 1

[node name="Label2" type="Label" parent="rum_slider"]
margin_left = 46.5705
margin_top = -24.1426
margin_right = 119.57
margin_bottom = -10.1426
text = "Rum"
align = 1

[node name="gelo_slider" type="HSlider" parent="."]
margin_left = 221.16
margin_top = 305.612
margin_right = 383.16
margin_bottom = 321.612
step = 0.5

[node name="Label" type="Label" parent="gelo_slider"]
margin_left = 176.776
margin_top = -11.3437
margin_right = 216.776
margin_bottom = 27.6563
text = "0"
align = 1
valign = 1

[node name="Label2" type="Label" parent="gelo_slider"]
margin_left = 64.3031
margin_top = -24.8639
margin_right = 104.303
margin_bottom = -10.8639
text = "gelo"
align = 1

[node name="refrigerante_slider" type="HSlider" parent="."]
margin_left = 218.317
margin_top = 458.659
margin_right = 380.317
margin_bottom = 474.659
step = 0.5

[node name="Label" type="Label" parent="refrigerante_slider"]
margin_left = 172.565
margin_top = -12.8977
margin_right = 212.565
margin_bottom = 26.1023
text = "0"
align = 1
valign = 1

[node name="OptionButton" type="OptionButton" parent="refrigerante_slider"]
margin_left = 37.7099
margin_top = -27.2853
margin_right = 138.71
margin_bottom = -7.28528
toggle_mode = true
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 678.594
margin_top = 288.933
margin_right = 718.594
margin_bottom = 302.933

[node name="Label2" type="Label" parent="."]
margin_left = 676.694
margin_top = 332.633
margin_right = 716.694
margin_bottom = 346.633
